<resources>
    <string name="app_name">PPL Tracker</string>
    <string name="button_Pull">Pull</string>
    <string name="pull_weights">  PULL WEIGHTS</string>
    <string name="deadlift">Deadlift:</string>
    <string name="pull">Pull</string>
    <string name="weights">Weights</string>
    <string name="barbellrow">Barbell Row:</string>
    <string name="cablerow">Cable Row:</string>
    <string name="facepull">Facepull:</string>
    <string name="curl">Curl:</string>
    <string name="pullups">Pullups:</string>ä
    <string name="saved_dlKg">DL_KG</string>
    <string name="bbrKg">40</string>
    <string name="cablerowKg">50</string>
    <string name="rest">REST</string>
    <string name="sets">Set: "   "/ </string>
    <string name="dlExercise">Deadlift 3x5 at </string>
    <string name="pullupExercise">"Pullups 3x10 at </string>
    <string name="cableRowExercise">Cable Row 3x12 at </string>
    <string name="bbrExercise">BarB Row 5x5 at </string>
    <string name="faceExercise">Facepulls 5x15 at </string>
    <string name="curlExercise">Bi-Curls 4x12 at </string>
    <string name="title_activity_weight_settings">WeightSettings</string>
    <string name="tab_text_1">PULL</string>

    <string name="BenchHExercise">Bench 5x5 at</string>
    <string name="ohpLExercise">OHP 3x10 at</string>
    <string name="ohpHExercise">OHP 5x5 at</string>
    <string name="benchLExercise">Bench 3x10 at</string>
    <string name="inclineExercise">Incline 3x10 at</string>
    <string name="dipsExercise">Dips 3x8 at</string>
    <string name="pushdownExercise">Pushdown/LatRaise(SS) 3x12 at</string>
    <string name="suitcaseExercise">Suitcase Carry 2x1min at</string>

    <string name="tab_text_2">PUSH</string>
    <string name="push_weights"> PUSH WEIGHTS</string>
    <string name="HeavyBench">Bench 5x5:</string>
    <string name="LightBench">Bench 3x8:</string>
    <string name="HeavyOhp">OHP 5x5:</string>
    <string name="LightOhp">OHP 3x8:</string>
    <string name="InclineBench">IncBench 3x8:</string>
    <string name="Dips">Dips 3x5:</string>
    <string name="LatRaise">LatRaise:</string>
    <string name="Pushdown">Pushdown:</string>
    <string name="Suitcase">Suitcase:</string>

    <string name="tab_text_3">LEGS</string>
    <string name="squatExercise">Squat 5x5:</string>
    <string name="romanianExercise">RDL 3x10:</string>
    <string name="legpressExercise">LegPress 3x8:</string>
    <string name="hamcurlExercise">HamCurl 3x8:</string>
    <string name="calfExercise">Calf 3x10:</string>
    <string name="hanglegExercise">HangLeg 3x7:</string>
    


</resources>
