<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeightsActivity">


    <TextView
        android:id="@+id/pullText"
        android:layout_width="105dp"
        android:layout_height="41dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="108dp"
        android:text="@string/pull_weights"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DeadLift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="180dp"
        android:text="@string/deadlift"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Deadlift_Weight"
        android:layout_width="50dp"
        android:layout_height="42dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="18dp"
        android:ems="5"
        android:inputType="number"
        android:text="@string/saved_dlKg"
        app:layout_constraintStart_toEndOf="@+id/DeadLift"
        app:layout_constraintTop_toBottomOf="@+id/pullText" />

    <TextView
        android:id="@+id/Barbell_Row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="24dp"
        android:text="@string/barbellrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DeadLift" />

    <EditText
        android:id="@+id/BBRow_Weight"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="62dp"
        android:ems="5"
        android:inputType="number"
        android:text="@string/bbrKg"
        app:layout_constraintStart_toEndOf="@+id/Barbell_Row"
        app:layout_constraintTop_toBottomOf="@+id/pullText" />

    <TextView
        android:id="@+id/pullups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="24dp"
        android:text="@string/pullups"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Barbell_Row" />

    <TextView
        android:id="@+id/cableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="24dp"
        android:text="@string/cablerow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pullups" />

    <TextView
        android:id="@+id/facePulls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="24dp"
        android:text="@string/facepull"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cableRow" />

    <TextView
        android:id="@+id/curls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="24dp"
        android:text="@string/curl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facePulls" />

    <EditText
        android:id="@+id/pullup_weight"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="4dp"
        android:ems="5"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/pullups"
        app:layout_constraintTop_toBottomOf="@+id/BBRow_Weight" />

    <EditText
        android:id="@+id/cable_weight"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/cableRow"
        app:layout_constraintTop_toBottomOf="@+id/pullup_weight" />

    <EditText
        android:id="@+id/face_weight"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/facePulls"
        app:layout_constraintTop_toBottomOf="@+id/cable_weight" />

    <EditText
        android:id="@+id/curl_weight"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="3dp"
        android:ems="5"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/curls"
        app:layout_constraintTop_toBottomOf="@+id/face_weight" />

</androidx.constraintlayout.widget.ConstraintLayout>